# smalluniverse

./: .gitignore  .haxerc  LICENSE  README.md  build.hxml  devbox.json  example.hxml  example_client.hxml  hxformat.json  package.json  test.hxml
.zed/: settings.json
decisions/: 0001_Html_Abstract.md  0002_Multiple_Event_Sources.md  0003_Separating_page_actions_and_app_events.md
example/: Dockerfile  deploy.sh  example.hxml  example_client.hxml  package.json
example/mealplanner/: App.hx  AppAction.hx  Client.hx  README.md  Server.hx  sample-data.json
example/mealplanner/domains/: Meals.hx  ShoppingList.hx  WeeklyPlan.hx
example/mealplanner/helpers/: DateString.hx  NullHelper.hx
example/mealplanner/pages/: HomePage.hx  IngredientPage.hx  IngredientPageApi.hx  MealPage.hx  MealPageApi.hx  MealsListPage.hx  MealsListPageApi.hx  QuickAddPage.hx  QuickAddPageApi.hx  ShopSelectorPage.hx  ShopSelectorPageApi.hx  ShoppingPage.hx  ShoppingPageApi.hx  WeeklyPlanPage.hx  WeeklyPlanPageApi.hx
example/mealplanner/ui/: ActionMenu.css  ActionMenu.hx  Button.css  Button.hx  CalendarGrid.css  Layout.hx  (+17 more)
haxe_libraries/: datetime.hxml  jsImport.hxml  uuid.hxml
rust/: Cargo.toml
rust/src/: event_source.rs  event_store.rs  lib.rs  meal_planner.rs  types.rs
rust/src/event_store/: sqlite_event_store.rs  tsv_event_store.rs
rust/src/meal_planner/: meals_event.rs
rust/tests/: test_migration.rs
src/: Main.hx  Snabbdom.hx
src/smalluniverse/: DOM.hx  Hooks.hx  SmallUniverse.hx  template.html
test/: Main.hx  Test.hx
test/smalluniverse/: DOMTest.hx  SmallUniverseTest.hx
(+17 files in other folders)
