[package]
name = "smalluniverse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.2.2", features = ["v4"] }
rusqlite = { version = "0.29.0", features = ["bundled", "uuid"] }

[dev-dependencies]
tempfile = "3"